--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "todoproj",
   "version": "1.0.0",
   "description": "App for business to write your todo list",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "cross-env NODE_ENV=dev gulp",
+    "build": "cross-env NODE_ENV=prod gulp build"
   },
   "author": "Marharyta Andriukhina",
   "license": "ISC",
@@ -24,15 +26,16 @@
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^3.0.0",
     "gulp-rm": "^2.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-smile-px2rem": "^0.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
     "style-loader": "^2.0.0",
+    "underscore": "^1.11.0",
     "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0",
-    "gulp-sass": "^4.1.0"
+    "webpack-cli": "^4.1.0"
   },
   "devDependencies": {
     "node-sass": "^4.14.1"
