--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
     "style-loader": "^2.0.0",
-    "underscore": "^1.11.0",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0"
+    "underscore": "^1.11.0"
   },
   "devDependencies": {
+    "gulp-browserify": "^0.5.1",
     "node-sass": "^4.14.1"
   }
 }
